Trigger Highcharts update on input change
Ensure the chart refreshes when the licensesPerMonth input changes. Adds an updateFlag bound to the highcharts-chart [update] input, extracts series/total setup into updateChart(), and calls it from ngOnInit and ngOnChanges. Imports SimpleChanges, computes series types/colors and totals for Comercial/Industrial, and toggles updateFlag via setTimeout to trigger highcharts-angular to redraw.

--- a/src/app/pages/dashboard/certificado-licenca-categoria-charts/certificado-licenca-categoria-charts.component.html
+++ b/src/app/pages/dashboard/certificado-licenca-categoria-charts/certificado-licenca-categoria-charts.component.html
@@ -17,6 +17,6 @@
     </div>
 
     <div class="graph">
-        <highcharts-chart [options]="chartOptions" style="width: 100%; min-height: 400px; display: block;"></highcharts-chart>
+        <highcharts-chart [options]="chartOptions" [update]="updateFlag" style="width: 100%; min-height: 400px; display: block;"></highcharts-chart>
     </div>
 </div>
